Flush stderr before error reporting [Bug #18244]